--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <html>
-    <head>
-        <meta charset="UTF-8">
-    </head>
-    <body>
-        <h1>Electron JS</h1>
-    </body>
+
+<head>
+    <meta http-equiv="Content-Security-Policy" content="default-src *; child-src 'none'; object-src 'none'">
+    <meta charset="UTF-8">
+</head>
+
+<body>
+    <h1>Electron JS</h1>
+    <script type="text/javascript" src="index.js"></script>
+</body>
+
 </html>
